--- a/style.css
+++ b/style.css
@@ -171,3 +171,50 @@
 
 /* THIRD PROJECT --------------------------------------- */
 
+.thirdHeader {
+  height: 100vh;
+}
+
+.thirdnavbar {
+  background-color: #d77b62;
+  color: white;
+  height: 50px;
+}
+
+.thirdmenu {
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.thirdlogo {
+  background-color: #f5ece6;
+  height: 150px;
+}
+
+.thirdpicture {
+  height: 150px;
+  display: block;
+  margin: auto;
+}
+
+.thirdimage {
+  object-fit: cover;
+  background-image:url(https://images.unsplash.com/photo-1613292252537-be6ada176e0e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-position: top; */
+  height: calc(100vh - 200px);
+}
+
+.thirdtitle {
+  width: 300px;
+  margin-left: 100px;
+  color: #f5ece6;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
