--- a/style.css
+++ b/style.css
@@ -73,9 +73,54 @@
 
  /* FIRST PROJECT --------------------------------------- */
 
+/* Hamburger menu */
+.topnav {
+  display: none;
+  overflow: hidden;
+  background-color: #ece9e5;
+  position: relative;
+}
+
+.topnav #myLinks1, #myLinks2, #myLinks3 {
+  display: none;
+}
+
+#myLinks1, #myLinks2, #myLinks3 {
+  position: fixed;
+    background-color: #ece9e5;
+    width: 100%;
+}
+
+.topnav a {
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: #ece9e5;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ece9e5;
+  color: black;
+}
+
+.responsivemenu {
+  height: 50px;
+}
+
+/* Hamburger menu */
+
 .firstHeader {
-    background-color: #f0e9df;
-    height: 100vh;
+    background-color:  #ece9e5;
+    height: 80vh;
 }
 
 .navbar {
@@ -83,54 +128,34 @@
     align-items: center;
     justify-content: space-between;
     margin: 0 15px;
-    padding-top: 15px;
+    height: 100px;
 }
 
 .logo {
-    width: 70px;
+    width: 200px;
 }
 
 .menu {
     display: flex;
-    gap: 10px;
-}
-
-.changeposition {
-    position: relative;
-    height: 0px;
-}
-
-.shapedPicture {
-    background-image:url(https://images.unsplash.com/photo-1539367628448-4bc5c9d171c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80);
-    width: 320px;
-    height: 400px;
-    border-radius: 50% 50% 100% 0% / 52% 100% 0% 52%;
-    position: relative;
-    top: -270px;
-    left: 150px;
-}
-
-.roundshape {
-    background-color: #d09f8e;
-    border-radius: 50%;
-    width: 320px;
-    height: 320px;
-    position: relative;
-    left: -20px;
-    top: 200px;
+    gap: 15px;
 }
 
 .mainsentence {
-    /* width: 500px; */
-    width: 45%;
+    width: 450px;
     position: relative;
-    top: 140px;
-    left: 250px;
-    font-size: 50px;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 45%;
+    text-align: right;
 }
 
-.toflex {
-    display: flex;
+.firstbackground {
+  background-image: url(https://images.unsplash.com/photo-1504204267155-aaad8e81290d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: calc(80vh - 100px);
 }
 
 /* SECOND PROJECT --------------------------------------- */
@@ -141,7 +166,7 @@
 }
 
 .secondHeader {
-    height: 100vh;
+    height: 80vh;
 }
 
 .secondnavbar {
@@ -159,24 +184,29 @@
 
 .pictureandtitle {
     height: 80%;
-    background-image:url(https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80);
-}
+    background-image:url(https://images.unsplash.com/photo-1504204267155-aaad8e81290d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
 .secondtitle {
     text-align: center;
     width: 450px;
     margin: auto;
-    padding-top: 200px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 /* THIRD PROJECT --------------------------------------- */
 
 .thirdHeader {
-  height: 100vh;
+  height: 80vh;
 }
 
 .thirdnavbar {
-  background-color: #d77b62;
+  background-color: #f5b2b2;
   color: white;
   height: 50px;
 }
@@ -190,31 +220,47 @@
 }
 
 .thirdlogo {
-  background-color: #f5ece6;
-  height: 150px;
+  background-color:  #ece9e5;
 }
 
 .thirdpicture {
-  height: 150px;
+  height: 100px;
   display: block;
   margin: auto;
 }
 
 .thirdimage {
   object-fit: cover;
-  background-image:url(https://images.unsplash.com/photo-1613292252537-be6ada176e0e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  background-image:url(https://images.unsplash.com/photo-1504204267155-aaad8e81290d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
   background-repeat: no-repeat;
   background-size: cover;
   /* background-position: top; */
-  height: calc(100vh - 200px);
+  height: calc(80vh - 150px);
 }
 
 .thirdtitle {
-  width: 300px;
-  margin-left: 100px;
-  color: #f5ece6;
-  text-align: center;
+  width: 450px;
+  margin-left: 10%;
+  color: black;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  text-align: left;
+}
+
+@media only screen and (max-width: 600px) {
+  .mainsentence, .secondtitle, .thirdtitle {
+    font-size: 20px;
+    width: 50%;
+  }
+  .topnav {
+    display: block;
+    /* height: 100px */
+  }
+  .navbar, .secondnavbar, .thirdnavbar, .thirdlogo {
+    display: none;
+  }
+  .firstbackground, .pictureandtitle, .thirdimage {
+    height: calc(74vh);
+  }
 }
